# claude-code-conversation-analytics

./: .env.example  .gitignore  CLAUDE.md  README.md  claude-mongo-sync@.service  ecosystem.config.js  package-lock.json  package.json
analytics/: .dockerignore  .env.analytics.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  RUNBOOK.md  docker-compose.analytics.yml  prefect.yaml  pyproject.toml  requirements.txt
analytics/analytics/: __init__.py  cli.py  config.py  extractor.py  iceberg_extractor.py  loader.py  quality.py
analytics/analytics/flows/: __init__.py  deployment.py  main_pipeline.py
analytics/dbt/: .gitignore  README.md  dbt_project.yml  packages.yml  profiles.yml
analytics/dbt/models/marts/: _schema_dimensions.yml  _schema_facts.yml  dim_date.sql  dim_projects.sql  dim_sessions.sql  dim_tools.sql  fct_file_operations.sql  fct_messages.sql  fct_tool_calls.sql
analytics/dbt/models/marts/aggregates/: _schema.yml  agg_code_changes.sql  agg_daily_summary.sql  agg_hourly_activity.sql  agg_session_metrics.sql  agg_tool_efficiency.sql
analytics/dbt/models/staging/: _schema.yml  _sources.yml  stg_conversations.sql  stg_messages.sql  stg_tool_calls.sql
analytics/dbt/seeds/: _seeds.yml  tool_categories.csv
analytics/great_expectations/: great_expectations.yml
analytics/great_expectations/checkpoints/: analytics_checkpoint.yml
analytics/great_expectations/expectations/: bronze_expectations.json  silver_expectations.json
analytics/metabase/: Dockerfile  README.md  sample_questions.json
analytics/scripts/: configure_metabase_readonly.py
analytics/tests/: __init__.py  test_extractor.py  test_loader.py
docs/: IMPLEMENTATION-PLAN.md  SPEC.md
src/: buffer.ts  index.ts  sync.ts  types.ts  watcher.ts
sync-service/: ecosystem.config.js  package-lock.json  package.json
sync-service/src/: buffer.ts  index.ts  sync.ts
ui/: next.config.ts  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/conversations/: route.ts
ui/src/app/api/conversations/export/: route.ts
ui/src/app/api/projects/: route.ts
ui/src/app/api/sessions/: route.ts
ui/src/app/api/stats/: route.ts
ui/src/components/: ConversationDetail.tsx  ConversationList.tsx  FilterPanel.tsx  SessionChart.tsx
ui/src/hooks/: useConversations.ts  useStats.ts
ui/src/lib/: dateUtils.ts  mongodb.ts  types.ts
